KAN-232: Replace placeholder popular routes
